# maze-game

./: CLAUDE.md  README.md  config.py  game.py  main.py  maze.py  menu.py  player.py  pyproject.toml  utils.py
.github/workflows/: ci.yml  deploy-web.yml
plans/: maze_game_build.md
tests/: __init__.py  test_breadcrumbs.py  test_integration.py  test_maze.py  test_player.py  test_timer.py
