[project]
name = "maze-game"
version = "0.1.0"
description = "A maze game built with Pygame featuring random maze generation and multiple difficulty levels"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["maze", "player", "menu", "config"]
omit = ["tests/*", ".venv/*"]
